lldb/tools/lldb-eval/lldb-eval/parser.cc
// Copyright 2020 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

#include "lldb-eval/parser.h"

#include <stdlib.h>

#include <cstdint>
#include <memory>
#include <sstream>
#include <string>
#include <tuple>
#include <type_traits>
#include <vector>

#include "clang/Basic/Diagnostic.h"
#include "clang/Basic/LangOptions.h"
#include "clang/Basic/SourceLocation.h"
#include "clang/Basic/SourceManager.h"
#include "clang/Basic/TargetInfo.h"
#include "clang/Basic/TargetOptions.h"
#include "clang/Basic/TokenKinds.h"
#include "clang/Lex/HeaderSearch.h"
#include "clang/Lex/HeaderSearchOptions.h"
#include "clang/Lex/LiteralSupport.h"
#include "clang/Lex/ModuleLoader.h"
#include "clang/Lex/Preprocessor.h"
#include "clang/Lex/PreprocessorOptions.h"
#include "clang/Lex/Token.h"
#include "lldb-eval/ast.h"
#include "lldb-eval/defines.h"
#include "lldb/lldb-enumerations.h"
#include "llvm/ADT/StringRef.h"
#include "llvm/ADT/iterator_range.h"
#include "llvm/Support/FormatAdapters.h"
#include "llvm/Support/FormatVariadic.h"
#include "llvm/TargetParser/Host.h"

namespace {

const char* kInvalidOperandsToUnaryExpression =
    "invalid argument type {0} to unary expression";

const char* kInvalidOperandsToBinaryExpression =
    "invalid operands to binary expression ({0} and {1})";

const char* kValueIsNotConvertibleToBool =
    "value of type {0} is not contextually convertible to 'bool'";

template <typename T>
constexpr unsigned type_width() {
  return static_cast<unsigned>(sizeof(T)) * CHAR_BIT;
}

inline void TokenKindsJoinImpl(std::ostringstream& os,
                               clang::tok::TokenKind k) {
  os << "'" << clang::tok::getTokenName(k) << "'";
}

template <typename... Ts>
inline void TokenKindsJoinImpl(std::ostringstream& os, clang::tok::TokenKind k,
                               Ts... ks) {
  TokenKindsJoinImpl(os, k);
  os << ", ";
  TokenKindsJoinImpl(os, ks...);
}

template <typename... Ts>
inline std::string TokenKindsJoin(clang::tok::TokenKind k, Ts... ks) {
  std::ostringstream os;
  TokenKindsJoinImpl(os, k, ks...);

  return os.str();
}

}  // namespace

namespace lldb_eval {

std::tuple<lldb::BasicType, bool> PickIntegerType(
    ParserContext& ctx, const clang::NumericLiteralParser& literal,
    const llvm::APInt& value) {
  unsigned int_size =
      ctx.GetBasicType(lldb::eBasicTypeInt)->GetByteSize() * CHAR_BIT;
  unsigned long_size =
      ctx.GetBasicType(lldb::eBasicTypeLong)->GetByteSize() * CHAR_BIT;
  unsigned long_long_size =
      ctx.GetBasicType(lldb::eBasicTypeLongLong)->GetByteSize() * CHAR_BIT;

  // Binary, Octal, Hexadecimal and literals with a U suffix are allowed to be
  // an unsigned integer.
  bool unsigned_is_allowed = literal.isUnsigned || literal.getRadix() != 10;

  // Try int/unsigned int.
  if (!literal.isLong && !literal.isLongLong && value.isIntN(int_size)) {
    if (!literal.isUnsigned && value.isIntN(int_size - 1)) {
      return {lldb::eBasicTypeInt, false};
    }
    if (unsigned_is_allowed) {
      return {lldb::eBasicTypeUnsignedInt, true};
    }
  }
  // Try long/unsigned long.
  if (!literal.isLongLong && value.isIntN(long_size)) {
    if (!literal.isUnsigned && value.isIntN(long_size - 1)) {
      return {lldb::eBasicTypeLong, false};
    }
    if (unsigned_is_allowed) {
      return {lldb::eBasicTypeUnsignedLong, true};
    }
  }
  // Try long long/unsigned long long.
  if (value.isIntN(long_long_size)) {
    if (!literal.isUnsigned && value.isIntN(long_long_size - 1)) {
      return {lldb::eBasicTypeLongLong, false};
    }
    if (unsigned_is_allowed) {
      return {lldb::eBasicTypeUnsignedLongLong, true};
    }
  }

  // If we still couldn't decide a type, we probably have something that does
  // not fit in a signed long long, but has no U suffix. Also known as:
  //
  //  warning: integer literal is too large to be represented in a signed
  //  integer type, interpreting as unsigned [-Wimplicitly-unsigned-literal]
  //
  return {lldb::eBasicTypeUnsignedLongLong, true};
}

lldb::BasicType PickCharType(const clang::CharLiteralParser& literal) {
  if (literal.isMultiChar()) {
    return lldb::eBasicTypeInt;
#if LLVM_VERSION_MAJOR < 15
  } else if (literal.isAscii()) {
#else
  } else if (literal.isOrdinary()) {
#endif
    return lldb::eBasicTypeChar;
  } else if (literal.isWide()) {
    return lldb::eBasicTypeWChar;
  } else if (literal.isUTF8()) {
    // TODO: Change to eBasicTypeChar8 when support for u8 is added
    return lldb::eBasicTypeChar;
  } else if (literal.isUTF16()) {
    return lldb::eBasicTypeChar16;
  } else if (literal.isUTF32()) {
    return lldb::eBasicTypeChar32;
  }
  return lldb::eBasicTypeChar;
}

lldb::BasicType PickCharType(const clang::StringLiteralParser& literal) {
#if LLVM_VERSION_MAJOR < 15
  if (literal.isAscii()) {
#else
  if (literal.isOrdinary()) {
#endif
    return lldb::eBasicTypeChar;
  } else if (literal.isWide()) {
    return lldb::eBasicTypeWChar;
  } else if (literal.isUTF8()) {
    // TODO: Change to eBasicTypeChar8 when support for u8 is added.
    return lldb::eBasicTypeChar;
  } else if (literal.isUTF16()) {
    return lldb::eBasicTypeChar16;
  } else if (literal.isUTF32()) {
    return lldb::eBasicTypeChar32;
  }
  return lldb::eBasicTypeChar;
}

static bool TokenEndsTemplateArgumentList(const clang::Token& token) {
  // Note: in C++11 ">>" can be treated as "> >" and thus be a valid token
  // for the template argument list.
  return token.isOneOf(clang::tok::comma, clang::tok::greater,
                       clang::tok::greatergreater);
}

static ExprResult InsertSmartPtrToPointerConversion(ExprResult expr) {
  auto expr_type = expr->result_type_deref();

  assert(
      expr_type->IsSmartPtrType() &&
      "an argument to smart-ptr-to-pointer conversion must be a smart pointer");

  return std::make_unique<SmartPtrToPtrDecay>(
      expr->location(), expr_type->GetSmartPtrPointeeType()->GetPointerType(),
      std::move(expr));
}

static ExprResult InsertArrayToPointerConversion(ExprResult expr) {
  assert(expr->result_type_deref()->IsArrayType() &&
         "an argument to array-to-pointer conversion must be an array");

  // TODO(werat): Make this an explicit array-to-pointer conversion instead of
  // using a "generic" CStyleCastNode.
  return std::make_unique<CStyleCastNode>(
      expr->location(),
      expr->result_type_deref()->GetArrayElementType()->GetPointerType(),
      std::move(expr), CStyleCastKind::kPointer);
}

static TypeSP DoIntegralPromotion(ParserContext& ctx, TypeSP from) {
  assert((from->IsInteger() || from->IsUnscopedEnum()) &&
         "Integral promotion works only for integers and unscoped enums.");

  // Don't do anything if the type doesn't need to be promoted.
  if (!from->IsPromotableIntegerType()) {
    return from;
  }

  if (from->IsUnscopedEnum()) {
    // Get the enumeration underlying type and promote it.
    return DoIntegralPromotion(ctx, from->GetEnumerationIntegerType(ctx));
  }

  // At this point the type should an integer.
  assert(from->IsInteger() && "invalid type: must be an integer");

  // Get the underlying builtin representation.
  lldb::BasicType builtin_type = from->GetCanonicalType()->GetBasicType();

  if (builtin_type == lldb::eBasicTypeWChar ||
      builtin_type == lldb::eBasicTypeSignedWChar ||
      builtin_type == lldb::eBasicTypeUnsignedWChar ||
      builtin_type == lldb::eBasicTypeChar16 ||
      builtin_type == lldb::eBasicTypeChar32) {
    // Find the type that can hold the entire range of values for our type.
    bool is_signed = from->IsSigned();
    uint64_t from_size = from->GetByteSize();

    TypeSP promote_types[] = {
        ctx.GetBasicType(lldb::eBasicTypeInt),
        ctx.GetBasicType(lldb::eBasicTypeUnsignedInt),
        ctx.GetBasicType(lldb::eBasicTypeLong),
        ctx.GetBasicType(lldb::eBasicTypeUnsignedLong),
        ctx.GetBasicType(lldb::eBasicTypeLongLong),
        ctx.GetBasicType(lldb::eBasicTypeUnsignedLongLong),
    };
    for (auto& type : promote_types) {
      if (from_size < type->GetByteSize() ||
          (from_size == type->GetByteSize() &&
           is_signed == (bool)(type->GetTypeFlags() & lldb::eTypeIsSigned))) {
        return std::move(type);
      }
    }

    lldb_eval_unreachable("char type should fit into long long");
  }

  // Here we can promote only to "int" or "unsigned int".
  TypeSP int_type = ctx.GetBasicType(lldb::eBasicTypeInt);

  // Signed integer types can be safely promoted to "int".
  if (from->IsSigned()) {
    return int_type;
  }
  // Unsigned integer types are promoted to "unsigned int" if "int" cannot hold
  // their entire value range.
  return (from->GetByteSize() == int_type->GetByteSize())
             ? ctx.GetBasicType(lldb::eBasicTypeUnsignedInt)
             : std::move(int_type);
}

static ExprResult UsualUnaryConversions(ParserContext& ctx, ExprResult expr) {
  // Perform usual conversions for unary operators. At the moment this includes
  // array-to-pointer and the integral promotion for eligible types.
  auto result_type = expr->result_type_deref();

  if (expr->is_bitfield()) {
    // Promote bitfields. If `int` can represent the bitfield value, it is
    // converted to `int`. Otherwise, if `unsigned int` can represent it, it
    // is converted to `unsigned int`. Otherwise, it is treated as its
    // underlying type.

    uint32_t bitfield_size = expr->bitfield_size();
    // Some bitfields have undefined size (e.g. result of ternary operation).
    // The AST's `bitfield_size` of those is 0, and no promotion takes place.
    if (bitfield_size > 0 && result_type->IsInteger()) {
      auto int_type = ctx.GetBasicType(lldb::eBasicTypeInt);
      auto uint_type = ctx.GetBasicType(lldb::eBasicTypeUnsignedInt);
      uint32_t int_bit_size = int_type->GetByteSize() * CHAR_BIT;
      if (bitfield_size < int_bit_size ||
          (result_type->IsSigned() && bitfield_size == int_bit_size)) {
        expr = std::make_unique<CStyleCastNode>(expr->location(), int_type,
                                                std::move(expr),
                                                CStyleCastKind::kArithmetic);
      } else if (bitfield_size <= uint_type->GetByteSize() * CHAR_BIT) {
        expr = std::make_unique<CStyleCastNode>(expr->location(), uint_type,
                                                std::move(expr),
                                                CStyleCastKind::kArithmetic);
      }
    }
  }

  if (result_type->IsArrayType()) {
    expr = InsertArrayToPointerConversion(std::move(expr));
  }

  if (result_type->IsInteger() || result_type->IsUnscopedEnum()) {
    auto promoted_type = DoIntegralPromotion(ctx, result_type);

    // Insert a cast if the type promotion is happening.
    // TODO(werat): Make this an implicit static_cast.
    if (!CompareTypes(promoted_type, result_type)) {
      expr = std::make_unique<CStyleCastNode>(expr->location(), promoted_type,
                                              std::move(expr),
                                              CStyleCastKind::kArithmetic);
    }
  }

  return expr;
}

static size_t ConversionRank(TypeSP type) {
  // Get integer conversion rank
  // https://eel.is/c++draft/conv.rank
  switch (type->GetCanonicalType()->GetBasicType()) {
    case lldb::eBasicTypeBool:
      return 1;
    case lldb::eBasicTypeChar:
    case lldb::eBasicTypeSignedChar:
    case lldb::eBasicTypeUnsignedChar:
      return 2;
    case lldb::eBasicTypeShort:
    case lldb::eBasicTypeUnsignedShort:
      return 3;
    case lldb::eBasicTypeInt:
    case lldb::eBasicTypeUnsignedInt:
      return 4;
    case lldb::eBasicTypeLong:
    case lldb::eBasicTypeUnsignedLong:
      return 5;
    case lldb::eBasicTypeLongLong:
    case lldb::eBasicTypeUnsignedLongLong:
      return 6;

      // TODO: The ranks of char16_t, char32_t, and wchar_t are equal to the
      // ranks of their underlying types.
    case lldb::eBasicTypeWChar:
    case lldb::eBasicTypeSignedWChar:
    case lldb::eBasicTypeUnsignedWChar:
      return 3;
    case lldb::eBasicTypeChar16:
      return 3;
    case lldb::eBasicTypeChar32:
      return 4;

    default:
      break;
  }
  return 0;
}

static lldb::BasicType BasicTypeToUnsigned(lldb::BasicType basic_type) {
  switch (basic_type) {
    case lldb::eBasicTypeInt:
      return lldb::eBasicTypeUnsignedInt;
    case lldb::eBasicTypeLong:
      return lldb::eBasicTypeUnsignedLong;
    case lldb::eBasicTypeLongLong:
      return lldb::eBasicTypeUnsignedLongLong;
    default:
      return basic_type;
  }
}

static void PerformIntegerConversions(ParserContext& ctx, ExprResult& l,
                                      ExprResult& r, bool convert_lhs,
                                      bool convert_rhs) {
  // Assert that rank(l) < rank(r).
  auto l_type = l->result_type_deref();
  auto r_type = r->result_type_deref();

  // if `r` is signed and `l` is unsigned, check whether it can represent all
  // of the values of the type of the `l`. If not, then promote `r` to the
  // unsigned version of its type.
  if (r_type->IsSigned() && !l_type->IsSigned()) {
    uint64_t l_size = l_type->GetByteSize();
    uint64_t r_size = r_type->GetByteSize();

    assert(l_size <= r_size && "left value must not be larger then the right!");

    if (r_size == l_size) {
      auto r_type_unsigned = ctx.GetBasicType(
          BasicTypeToUnsigned(r_type->GetCanonicalType()->GetBasicType()));
      if (convert_rhs) {
        r = std::make_unique<CStyleCastNode>(r->location(), r_type_unsigned,
                                             std::move(r),
                                             CStyleCastKind::kArithmetic);
      }
    }
  }

  if (convert_lhs) {
    l = std::make_unique<CStyleCastNode>(l->location(), r->result_type(),
                                         std::move(l),
                                         CStyleCastKind::kArithmetic);
  }
}

static TypeSP UsualArithmeticConversions(ParserContext& ctx, ExprResult& lhs,
                                         ExprResult& rhs,
                                         bool is_comp_assign = false) {
  // Apply unary conversions (e.g. intergal promotion) for both operands.
  // In case of a composite assignment operator LHS shouldn't get promoted.
  if (!is_comp_assign) {
    lhs = UsualUnaryConversions(ctx, std::move(lhs));
  }
  rhs = UsualUnaryConversions(ctx, std::move(rhs));

  auto lhs_type = lhs->result_type_deref();
  auto rhs_type = rhs->result_type_deref();

  if (CompareTypes(lhs_type, rhs_type)) {
    return lhs_type;
  }

  // If either of the operands is not arithmetic (e.g. pointer), we're done.
  if (!lhs_type->IsScalar() || !rhs_type->IsScalar()) {
    return ctx.GetEmptyType();
  }

  // Handle conversions for floating types (float, double).
  if (lhs_type->IsFloat() || rhs_type->IsFloat()) {
    // If both are floats, convert the smaller operand to the bigger.
    if (lhs_type->IsFloat() && rhs_type->IsFloat()) {
      int order = lhs_type->GetBasicType() - rhs_type->GetBasicType();
      if (order > 0) {
        rhs = std::make_unique<CStyleCastNode>(rhs->location(), lhs_type,
                                               std::move(rhs),
                                               CStyleCastKind::kArithmetic);
        return lhs_type;
      }
      assert(order < 0 && "illegal operands: must not be of the same type");
      if (!is_comp_assign) {
        lhs = std::make_unique<CStyleCastNode>(lhs->location(), rhs_type,
                                               std::move(lhs),
                                               CStyleCastKind::kArithmetic);
      }
      return rhs_type;
    }

    if (lhs_type->IsFloat()) {
      assert(rhs_type->IsInteger() && "illegal operand: must be an integer");
      rhs = std::make_unique<CStyleCastNode>(rhs->location(), lhs_type,
                                             std::move(rhs),
                                             CStyleCastKind::kArithmetic);
      return lhs_type;
    }
    assert(rhs_type->IsFloat() && "illegal operand: must be a float");
    if (!is_comp_assign) {
      lhs = std::make_unique<CStyleCastNode>(lhs->location(), rhs_type,
                                             std::move(lhs),
                                             CStyleCastKind::kArithmetic);
    }
    return rhs_type;
  }

  // Handle conversion for integer types.
  assert((lhs_type->IsInteger() && rhs_type->IsInteger()) &&
         "illegal operands: must be both integers");

  using Rank = std::tuple<size_t, bool>;
  Rank l_rank = {ConversionRank(lhs_type), !lhs_type->IsSigned()};
  Rank r_rank = {ConversionRank(rhs_type), !rhs_type->IsSigned()};

  if (l_rank < r_rank) {
    PerformIntegerConversions(ctx, lhs, rhs, !is_comp_assign, true);
  } else if (l_rank > r_rank) {
    PerformIntegerConversions(ctx, rhs, lhs, true, !is_comp_assign);
  }

  if (!is_comp_assign) {
    assert(CompareTypes(lhs->result_type_deref(), rhs->result_type_deref()) &&
           "integral promotion error: operands result types must be the same");
  }

  return lhs->result_type_deref()->GetCanonicalType();
}

static const char* GetTypeTag(TypeSP type) {
  switch (type->GetTypeClass()) {
      // clang-format off
    case lldb::eTypeClassClass:       return "class";
    case lldb::eTypeClassEnumeration: return "enum";
    case lldb::eTypeClassStruct:      return "struct";
    case lldb::eTypeClassUnion:       return "union";
      // clang-format on
    default:
      return "unknown";
  }
}

static const char* ToString(TypeDeclaration::TypeSpecifier type_spec) {
  using TypeSpecifier = TypeDeclaration::TypeSpecifier;
  switch (type_spec) {
      // clang-format off
    case TypeSpecifier::kVoid:       return "void";
    case TypeSpecifier::kBool:       return "bool";
    case TypeSpecifier::kChar:       return "char";
    case TypeSpecifier::kShort:      return "short";
    case TypeSpecifier::kInt:        return "int";
    case TypeSpecifier::kLong:       return "long";
    case TypeSpecifier::kLongLong:   return "long long";
    case TypeSpecifier::kFloat:      return "float";
    case TypeSpecifier::kDouble:     return "double";
    case TypeSpecifier::kLongDouble: return "long double";
    case TypeSpecifier::kWChar:      return "wchar_t";
    case TypeSpecifier::kChar16:     return "char16_t";
    case TypeSpecifier::kChar32:     return "char32_t";
      // clang-format on
    default:
      assert(false && "invalid type specifier");
      return nullptr;
  }
}

static const char* ToString(TypeDeclaration::SignSpecifier sign_spec) {
  using SignSpecifier = TypeDeclaration::SignSpecifier;
  switch (sign_spec) {
      // clang-format off
    case SignSpecifier::kSigned:   return "signed";
    case SignSpecifier::kUnsigned: return "unsigned";
      // clang-format on
    default:
      assert(false && "invalid sign specifier");
      return nullptr;
  }
}

static TypeDeclaration::TypeSpecifier ToTypeSpecifier(
    clang::tok::TokenKind kind) {
  using TypeSpecifier = TypeDeclaration::TypeSpecifier;
  switch (kind) {
      // clang-format off
    case clang::tok::kw_void:     return TypeSpecifier::kVoid;
    case clang::tok::kw_bool:     return TypeSpecifier::kBool;
    case clang::tok::kw_char:     return TypeSpecifier::kChar;
    case clang::tok::kw_short:    return TypeSpecifier::kShort;
    case clang::tok::kw_int:      return TypeSpecifier::kInt;
    case clang::tok::kw_long:     return TypeSpecifier::kLong;
    case clang::tok::kw_float:    return TypeSpecifier::kFloat;
    case clang::tok::kw_double:   return TypeSpecifier::kDouble;
    case clang::tok::kw_wchar_t:  return TypeSpecifier::kWChar;
    case clang::tok::kw_char16_t: return TypeSpecifier::kChar16;
    case clang::tok::kw_char32_t: return TypeSpecifier::kChar32;
      // clang-format on
    default:
      assert(false && "invalid type specifier token");
      return TypeSpecifier::kUnknown;
  }
}

lldb::BasicType TypeDeclaration::GetBasicType() const {
  assert(is_builtin_ && "type declaration doesn't describe a builtin type");

  if (sign_specifier_ == SignSpecifier::kSigned &&
      type_specifier_ == TypeSpecifier::kChar) {
    // "signed char" isn't the same as "char".
    return lldb::eBasicTypeSignedChar;
  }

  if (sign_specifier_ == SignSpecifier::kUnsigned) {
    switch (type_specifier_) {
        // clang-format off
      // "unsigned" is "unsigned int"
      case TypeSpecifier::kUnknown:  return lldb::eBasicTypeUnsignedInt;
      case TypeSpecifier::kChar:     return lldb::eBasicTypeUnsignedChar;
      case TypeSpecifier::kShort:    return lldb::eBasicTypeUnsignedShort;
      case TypeSpecifier::kInt:      return lldb::eBasicTypeUnsignedInt;
      case TypeSpecifier::kLong:     return lldb::eBasicTypeUnsignedLong;
      case TypeSpecifier::kLongLong: return lldb::eBasicTypeUnsignedLongLong;
      // clang-format on
      default:
        assert(false && "unknown unsigned basic type");
        return lldb::eBasicTypeInvalid;
    }
  }

  switch (type_specifier_) {
      // clang-format off
    case TypeSpecifier::kUnknown:
      // "signed" is "signed int"
      assert(sign_specifier_ == SignSpecifier::kSigned &&
             "invalid basic type declaration");
      return lldb::eBasicTypeInt;
    case TypeSpecifier::kVoid:       return lldb::eBasicTypeVoid;
    case TypeSpecifier::kBool:       return lldb::eBasicTypeBool;
    case TypeSpecifier::kChar:       return lldb::eBasicTypeChar;
    case TypeSpecifier::kShort:      return lldb::eBasicTypeShort;
    case TypeSpecifier::kInt:        return lldb::eBasicTypeInt;
    case TypeSpecifier::kLong:       return lldb::eBasicTypeLong;
    case TypeSpecifier::kLongLong:   return lldb::eBasicTypeLongLong;
    case TypeSpecifier::kFloat:      return lldb::eBasicTypeFloat;
    case TypeSpecifier::kDouble:     return lldb::eBasicTypeDouble;
    case TypeSpecifier::kLongDouble: return lldb::eBasicTypeLongDouble;
    case TypeSpecifier::kWChar:      return lldb::eBasicTypeWChar;
    case TypeSpecifier::kChar16:     return lldb::eBasicTypeChar16;
    case TypeSpecifier::kChar32:     return lldb::eBasicTypeChar32;
      // clang-format on
  }

  return lldb::eBasicTypeInvalid;
}

static std::unique_ptr<BuiltinFunctionDef> GetBuiltinFunctionDef(
    ParserContext& ctx, const std::string& identifier) {
  //
  // __log2(unsigned int x) -> unsigned int
  //
  //   Calculates the log2(x).
  //
  if (identifier == "__log2") {
    TypeSP return_type = ctx.GetBasicType(lldb::eBasicTypeUnsignedInt);
    std::vector<TypeSP> arguments = {
        ctx.GetBasicType(lldb::eBasicTypeUnsignedInt),
    };
    return std::make_unique<BuiltinFunctionDef>(identifier, return_type,
                                                std::move(arguments));
  }
  //
  // __findnonnull(T* ptr, long long buffer_size) -> int
  //
  //   Finds the first non-null object pointed by `ptr`. `ptr` is treated as an
  //   array of pointers of size `buffer_size`.
  //
  if (identifier == "__findnonnull") {
    auto return_type = ctx.GetBasicType(lldb::eBasicTypeInt);
    std::vector<TypeSP> arguments = {
        // The first argument should actually be "T*", but we don't support
        // templates here.
        // HACK: Void means "any" and we'll check in runtime. The argument will
        // be passed as is without any conversions.
        ctx.GetBasicType(lldb::eBasicTypeVoid),
        ctx.GetBasicType(lldb::eBasicTypeLongLong),
    };
    return std::make_unique<BuiltinFunctionDef>(identifier, return_type,
                                                std::move(arguments));
  }
  // Not a builtin function.
  return nullptr;
}

// Checks whether `target_base` is a virtual base of `type` (direct or
// indirect). If it is, stores the first virtual base type on the path from
// `type` to `target_type`.
static bool IsVirtualBase(TypeSP type, TypeSP target_base, TypeSP* virtual_base,
                          bool carry_virtual = false) {
  if (CompareTypes(type, target_base)) {
    return carry_virtual;
  }

  if (!carry_virtual) {
    uint32_t num_virtual_bases = type->GetNumberOfVirtualBaseClasses();
    for (uint32_t i = 0; i < num_virtual_bases; ++i) {
      auto base = type->GetVirtualBaseClassAtIndex(i);
      if (IsVirtualBase(base, target_base, virtual_base,
                        /*carry_virtual*/ true)) {
        if (virtual_base) {
          *virtual_base = base;
        }
        return true;
      }
    }
  }

  uint32_t num_direct_bases = type->GetNumberOfDirectBaseClasses();
  for (uint32_t i = 0; i < num_direct_bases; ++i) {
    auto base = type->GetDirectBaseClassAtIndex(i).type;
    if (IsVirtualBase(base, target_base, virtual_base, carry_virtual)) {
      return true;
    }
  }

  return false;
}

Parser::Parser(std::shared_ptr<ParserContext> ctx) : ctx_(std::move(ctx)) {
  clang::SourceManager& sm = ctx_->GetSourceManager();
  clang::DiagnosticsEngine& de = sm.getDiagnostics();

  auto tOpts = std::make_shared<clang::TargetOptions>();
  tOpts->Triple = llvm::sys::getDefaultTargetTriple();

  ti_.reset(clang::TargetInfo::CreateTargetInfo(de, tOpts));

  lang_opts_ = std::make_unique<clang::LangOptions>();
  lang_opts_->Bool = true;
  lang_opts_->WChar = true;
  lang_opts_->CPlusPlus = true;
  lang_opts_->CPlusPlus11 = true;
  lang_opts_->CPlusPlus14 = true;
  lang_opts_->CPlusPlus17 = true;

  tml_ = std::make_unique<clang::TrivialModuleLoader>();

  auto hOpts = std::make_shared<clang::HeaderSearchOptions>();
  hs_ = std::make_unique<clang::HeaderSearch>(hOpts, sm, de, *lang_opts_,
                                              ti_.get());

  auto pOpts = std::make_shared<clang::PreprocessorOptions>();
  pp_ = std::make_unique<clang::Preprocessor>(pOpts, de, *lang_opts_, sm, *hs_,
                                              *tml_);
  pp_->Initialize(*ti_);
  pp_->EnterMainSourceFile();

  // Initialize the token.
  token_.setKind(clang::tok::unknown);
}

ExprResult Parser::Run(Error& error) {
  ConsumeToken();

  ExprResult expr;
  if (clang::tok::isStringLiteral(token_.getKind()) &&
      pp_->LookAhead(0).is(clang::tok::eof)) {
    // A special case to handle a single string-literal token.
    expr = ParseStringLiteral();
  } else {
    expr = ParseExpression();
  }

  Expect(clang::tok::eof);

  error = error_;
  error_.Clear();

  // Explicitly return ErrorNode if there was an error during the parsing.
  // Some routines raise an error, but don't change the return value (e.g.
  // Expect).
  if (error) {
    return std::make_unique<ErrorNode>(ctx_->GetEmptyType());
  }
  return expr;
}

std::string Parser::TokenDescription(const clang::Token& token) {
  const auto& spelling = pp_->getSpelling(token);
  const auto* kind_name = token.getName();
  return llvm::formatv("<'{0}' ({1})>", spelling, kind_name);
}

void Parser::Expect(clang::tok::TokenKind kind) {
  if (token_.isNot(kind)) {
    BailOut(ErrorCode::kUnknown,
            llvm::formatv("expected {0}, got: {1}", TokenKindsJoin(kind),
                          TokenDescription(token_)),
            token_.getLocation());
  }
}

template <typename... Ts>
void Parser::ExpectOneOf(clang::tok::TokenKind k, Ts... ks) {
  static_assert((std::is_same_v<Ts, clang::tok::TokenKind> && ...),
                "ExpectOneOf can be only called with values of type "
                "clang::tok::TokenKind");

  if (!token_.isOneOf(k, ks...)) {
    BailOut(ErrorCode::kUnknown,
            llvm::formatv("expected any of ({0}), got: {1}",
                          TokenKindsJoin(k, ks...), TokenDescription(token_)),
            token_.getLocation());
  }
}

void Parser::ConsumeToken() {
  if (token_.is(clang::tok::eof)) {
    // Don't do anything if we're already at eof. This can happen if an error
    // occurred during parsing and we're trying to bail out.
    return;
  }
  pp_->Lex(token_);
}

void Parser::BailOut(ErrorCode code, const std::string& error,
                     clang::SourceLocation loc) {
  if (error_) {
    // If error is already set, then the parser is in the "bail-out" mode. Don't
    // do anything and keep the original error.
    return;
  }

  error_.Set(code, FormatDiagnostics(ctx_->GetSourceManager(), error, loc));
  token_.setKind(clang::tok::eof);
}

// Parse an expression.
//
//  expression:
//    assignment_expression
//
ExprResult Parser::ParseExpression() { return ParseAssignmentExpression(); }

// Parse an assingment_expression.
//
//  assignment_expression:
//    conditional_expression
//    logical_or_expression assignment_operator assignment_expression
//
//  assignment_operator:
//    "="
//    "*="
//    "/="
//    "%="
//    "+="
//    "-="
//    ">>="
//    "<<="
//    "&="
//    "^="
//    "|="
//
//  conditional_expression:
//    logical_or_expression
//    logical_or_expression "?" expression ":" assignment_expression
//
ExprResult Parser::ParseAssignmentExpression() {
  auto lhs = ParseLogicalOrExpression();

  // Check if it's an assingment expression.
  if (token_.isOneOf(clang::tok::equal, clang::tok::starequal,
                     clang::tok::slashequal, clang::tok::percentequal,
                     clang::tok::plusequal, clang::tok::minusequal,
                     clang::tok::greatergreaterequal, clang::tok::lesslessequal,
                     clang::tok::ampequal, clang::tok::caretequal,
                     clang::tok::pipeequal)) {
    // That's an assingment!
    clang::Token token = token_;
    ConsumeToken();
    auto rhs = ParseAssignmentExpression();
    lhs = BuildBinaryOp(clang_token_kind_to_binary_op_kind(token.getKind()),
                        std::move(lhs), std::move(rhs), token.getLocation());
  }

  // Check if it's a conditional expression.
  if (token_.is(clang::tok::question)) {
    clang::Token token = token_;
    ConsumeToken();
    auto true_val = ParseExpression();
    Expect(clang::tok::colon);
    ConsumeToken();
